frontend/test/should_fail/array_map_exec_input_graph_element.grg
rule array_map_exec(ref a:array<Node>) {
	n:Node;
	modify {
		---
		exec({ aa:array<Edge> = a.map<Edge>{value:Edge -> value} });
	}
}
